# Sextant-public

./: .gitignore  CMakeLists.txt  CMakeSettings.json  bestFrame.cpp  galacticpositioningsystem.cpp  refVideoWriter.cpp  runtime.cpp  runtime.h  setup.cpp  sextant.cpp  starmapper.cpp
StageLightTriangulation/: StageLightTriangulation.sln
StageLightTriangulation/ReferanceImageGenerator/: ReferanceImageGenerator.cpp  ReferanceImageGenerator.vcxproj  ReferanceImageGenerator.vcxproj.filters
StageLightTriangulation/StageLightTriangulation/: StageLightTriangulation.cpp  StageLightTriangulation.vcxproj  StageLightTriangulation.vcxproj.filters
StageLightTriangulation/StageLightTriangulation/Debug/: StageLightTriangulation.pch  vc141.idb
StageLightTriangulation/StageLightTriangulation/Debug/StageLig.C1982B08.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  StageLightTriangulation.lastbuildstate
StageLightTriangulation/StageLightTriangulation/x64/Debug/: StageLightTriangulation.pch  vc141.idb
StageLightTriangulation/StageLightTriangulation/x64/Debug/StageLig.C1982B08.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  StageLightTriangulation.lastbuildstate
StageLightTriangulation/StageLightTriangulation/x64/Release/: StageLightTriangulation.pch
StageLightTriangulation/StageLightTriangulation/x64/Release/StageLig.C1982B08.tlog/: CL.command.1.tlog  CL.read.1.tlog  (+6 more)
StageLightTriangulation/x64/Release/: StageLightTriangulation.iobj  StageLightTriangulation.ipdb
enc_temp_folder/d9e91f8f5bd43e7564e779e36df3882/: galacticpositioningsystem.cpp
